tests/ui/proc-macro/quote/not-quotable-repetition-group-none.stderr
error[E0277]: the trait bound `[{integer}; 3]: ToTokens` is not satisfied
  --> $DIR/not-quotable-repetition-group-none.rs:9:9
   |
LL |         proc_macro::quote!($dollar $content *)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ToTokens` is not implemented for `[{integer}; 3]`
...
LL |     do_quote!($ f!($arr));
   |     ---------------------
   |     |
   |     required by a bound introduced by this call
   |     in this macro invocation
   |
   = help: the following other types implement trait `ToTokens`:
             &T
             &mut T
             Box<T>
             CString
             Cow<'_, T>
             Option<T>
             Rc<T>
             bool
           and 24 others
   = note: this error originates in the macro `proc_macro::quote` which comes from the expansion of the macro `do_quote` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
